--- a/main/timeline/package.json
+++ b/main/timeline/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@types/d3": "^6.3.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
